--- a/app/src/main/res/layout/receta_detail.xml
+++ b/app/src/main/res/layout/receta_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple_500"
-    tools:context=".RecetaDetail">
+    tools:context=".DetailCocina">
 
     <ImageView
         android:id="@+id/backgroundImageView"
