--- a/app/src/main/res/layout/cocina_list.xml
+++ b/app/src/main/res/layout/cocina_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#27283a"
-    tools:context=".RecetasCocinaList">
+    tools:context=".cocina.RecetasCocinaList">
 
     <RelativeLayout
         android:id="@+id/linearLayout"
@@ -75,7 +75,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.0"
-        tools:context=".RecetasCocinaList"
+        tools:context=".cocina.RecetasCocinaList"
         tools:listitem="@layout/item_list" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
