--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -27,7 +27,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_addNameCocina"
+                android:id="@+id/tv_nameAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -39,9 +39,19 @@
                 android:text="@string/name"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
-
             <TextView
-                android:id="@+id/dateTextView"
+                android:textStyle="bold"
+                android:id="@+id/subid_por"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="120dp"
+                android:layout_marginRight="120dp"
+                android:textColor="#cbcbcb"
+                android:text="Subido Por:" />
+            <TextView
+                android:id="@+id/subidoPor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
