--- a/app/src/main/res/layout/registrarse.xml
+++ b/app/src/main/res/layout/registrarse.xml
@@ -28,9 +28,9 @@
         android:layout_margin="10dp"
         android:hint="Número de Teléfono"
         android:inputType="phone"
+        android:textStyle="bold"
         android:text=""
         android:textColor="@android:color/white"
-        android:textColorHint="@android:color/black"
         android:textSize="23sp"
         app:layout_constraintBottom_toTopOf="@+id/edtNombre"
         app:layout_constraintEnd_toEndOf="parent"
@@ -167,13 +167,13 @@
     <Button
         android:id="@+id/btnRegistro"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@android:color/black"
+        android:background="@drawable/ic_btn2"
         android:text="REGISTRARSE"
         android:textColor="@android:color/white"
         android:textSize="20sp"
