--- a/app/src/main/res/layout/cocina_edit.xml
+++ b/app/src/main/res/layout/cocina_edit.xml
@@ -9,7 +9,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="320dp"
-        android:background="#000000"
+        android:background="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,30 +51,13 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/tv_nameEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_margin="10dp"
-                    android:text="@string/name_form"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="match_parent"
+                android:padding="10dp">
 
                 <EditText
                     android:id="@+id/et_nameEdit"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
-                    android:layout_below="@+id/tv_nameEdit"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentEnd="true"
@@ -90,47 +73,70 @@
                     android:paddingBottom="8dp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
+                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_nameEdit" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_nameEdit">
 
-                    <ImageView
-                        android:id="@+id/imagePDFEdit"
-                        android:layout_width="100dp"
-                        android:layout_height="150dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/buscar_pdf"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/btn_cancelarPDFEdit"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
                     <Button
-                        android:id="@+id/btn_cancelarPDFEdit"
-                        android:layout_width="150dp"
+                        android:id="@+id/btn_editArchivo"
+                        android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_margin="10dp"
                         android:background="@drawable/ic_btn2"
                         android:gravity="center"
-                        android:text="@string/cancelar_pdf"
+                        android:text="@string/cargar_archivo"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:layout_marginEnd="20dp"
+                        android:id="@+id/imageView4"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/word_no"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/btn_editArchivo" />
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/video_no"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
+                        app:layout_constraintStart_toEndOf="@+id/imageView5"
+                        app:layout_constraintTop_toBottomOf="@+id/btn_editArchivo" />
+
+                    <ImageView
+                        android:layout_marginStart="20dp"
+                        android:id="@+id/imageView5"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/pdf_no"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/btn_editArchivo"
+                        app:layout_constraintTop_toBottomOf="@+id/btn_editArchivo" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -218,6 +224,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/imageEdit" />
 
                 <Button
+                    android:layout_margin="10dp"
                     android:id="@+id/btn_saveEdit"
                     android:layout_width="240dp"
                     android:layout_height="56dp"
