--- a/app/src/main/res/layout/pantalla_inicial.xml
+++ b/app/src/main/res/layout/pantalla_inicial.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="20dp"
         android:background="@drawable/portada_app"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -105,7 +106,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:fontFamily="@font/myfont"
             android:text="@string/olvide_contrasena"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -118,7 +118,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:fontFamily="@font/myfont"
             android:text="@string/no_registrado"
             android:textColor="@color/white"
             android:textStyle="bold"
