--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -12,4 +12,8 @@
         android:title="Postres"
         android:id="@+id/menu_postres"
         android:icon="@drawable/ic_postres_cafe"/>
+    <item
+        android:title="Panadería"
+        android:id="@+id/menu_panaderia"
+        android:icon="@drawable/ic_panaderia"/>
 </menu>
